--- a/setup.cfg
+++ b/setup.cfg
@@ -5,7 +5,7 @@ description = RPL workcell execution interface
 long_description = file:README.md
 long_description_content_type=text/markdown
 
-url = https://github.com/KPHippe/rpl_wei
+url = https://github.com/AD-SDL/rpl_wei
 author = Kyle Hippe
 author_email = kyle.hippe@gmail.com
 
@@ -15,8 +15,8 @@ python_requires = >=3.6
 
 [options.packages.find]
 exclude =
-	tests
-	docs
+tests
+docs
 
 [flake8]
 exclude = .git
