--- a/setup.cfg
+++ b/setup.cfg
@@ -38,3 +38,8 @@ strict_optional = True
 plugins = pydantic.mypy
 strict = True
 disallow_untyped_defs = True
+
+[pydocstyle]
+inherit = false
+select = D100, D101, D102, D103, D104, D105, D106, D107
+match = .*\.py
