Trying again to make tests happy

--- a/setup.cfg
+++ b/setup.cfg
@@ -17,6 +17,9 @@ python_requires = >=3.6
 exclude =
 	docs
 
+[options.package_data]
+* = *.txt, *.yaml, *.json
+
 [flake8]
 exclude = .git
 max-line-length = 118
