Starting infrastructure for publishing

--- a/tests/test_pcr_workcell.yaml
+++ b/tests/test_pcr_workcell.yaml
@@ -61,3 +61,5 @@ modules:
       ros_node: hidex rosnode
     positions:
       default: [0.0, 0.0, 0.0, 0.0, 0.0, 0.0]
+
+search_index: abcd-efgh-ijkl-mnop
