Fixed tests, didn't knwo changing input file would mess up tests

--- a/tests/test_pcr_workflow.yaml
+++ b/tests/test_pcr_workflow.yaml
@@ -66,7 +66,7 @@ flowdef:
     command: transfer
     args:
       source: sealer.positions.default
-      target: biometra.positions.default
+      target: [279.948, 40.849, 75.130, 598.739, 79.208, -916.456]
       source_plate_rotation: narrow
       target_plate_rotation: narrow
     checks: null
