--- a/requirements/requirements.txt
+++ b/requirements/requirements.txt
@@ -2,8 +2,8 @@
 pydantic==1.8.2
 devtools==0.9.0
 PyYAML==6.0
-fastapi
-uvicorn
-python-multipart
-rq
-requests
+fastapi==0.95.1
+uvicorn==0.21.1
+python-multipart==0.0.6
+rq==1.13.0
+requests==2.28.1
