Update to RTD config

--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -18,5 +18,5 @@ sphinx:
 # Optionally declare the Python requirements required to build your docs
 python:
    install:
-   - requirements: docs/requirements.txt
-   - requirements: docs/docs.txt
+   - requirements: requirements/requirements.txt
+   - requirements: requirements/docs.txt
