Install package, testing build

--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -20,3 +20,5 @@ python:
    install:
    - requirements: requirements/requirements.txt
    - requirements: requirements/docs.txt
+   - method: pip
+     path: .
