--- a/tests/test_pcr_workcell.yaml
+++ b/tests/test_pcr_workcell.yaml
@@ -64,4 +64,13 @@ modules:
     positions:
       default: [0.0, 0.0, 0.0, 0.0, 0.0, 0.0]
 
+  - name: camera_module
+    model: camera
+    type: wei_ros_camera
+    config:
+      ros_node: "/std_ns/camera_module"
+    positions:
+      plate_station: [90.597,26.416, 66.422, 714.811, 81.916, 995.074]
+
+
 search_index: abcd-efgh-ijkl-mnop
