--- a/.github/workflows/lint_and_test.yml
+++ b/.github/workflows/lint_and_test.yml
@@ -16,6 +16,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install flake8 pytest
+          pip install rclpy
           pip install -r requirements/requirements.txt
           pip install -r requirements/dev.txt
           pip install .
