--- a/tests/test_pcr_workcell.yaml
+++ b/tests/test_pcr_workcell.yaml
@@ -11,75 +11,127 @@ modules:
       final_destination: [0.0, 0.0, 0.0, 0.0, 0.0, 0.0]
 
   - name: pf400
-    model: pf400
     type: wei_ros_node
+    model: pf400
     config:
-      ros_node: "/pf400_client/PF400_Client_Node/action_handler"
+      ros_node: "/std_ns/pf400Node"
     positions:
-      final_destination: [0.0, 0.0, 0.0, 0.0, 0.0, 0.0]
+      trash: [218.457, -2.408, 38.829, 683.518, 89.109, 995.074]
+
+  - name: pf400_camera_right
+    type: wei_ros_camera
+    config:
+      ros_node: "/std_ns/pf400_camera_right"
+
+  - name: pf400_camera_left
+    type: wei_ros_camera
+    config:
+      ros_node: "/std_ns/pf400_camera_left"
 
   - name: sciclops
-    model: sciclops
     type: wei_ros_node
+    model: sciclops
     config:
-      ros_node: "/sciclops_module/sciclopsNode/action_handler"
+      ros_node: "/std_ns/SciclopsNode"
     positions:
-      exchange: [262.550, 20.608, 119.290, 662.570, 0.0, 574.367]
+      exchange: [222.0, -38.068, 335.876, 325.434, 79.923, 995.062]
 
   - name: sealer
-    model: sealer
     type: wei_ros_node
+    model: sealer
     config:
-      ros_node: "/sp_module/sealerNode/action_handler"
+      ros_node: "/std_ns/SealerNode"
     positions:
-      default: [231.788, -27.154, 313.011, 342.317, 0.0, 683.702]
-
+      default: [205.128, -2.814, 264.373, 365.863, 79.144, 411.553]
+      
   - name: peeler
     type: wei_ros_node
+    model: peeler
     config:
-      ros_node: "/sp_module/peelerNode/action_handler"
+      ros_node: "/std_ns/PeelerNode"
     positions:
-      default: [264.584, -29.413, 284.376, 372.338, 0.0, 651.621]
+      default: [225.521, -24.846, 244.836, 406.623, 80.967, 398.778]
 
-  - name: ot2_pcr_alpha ## correct? was ot2_alpha
-    model: ot2
-    type: wei_ros_node
+  - name: sp_module_camera
+    type: wei_ros_camera
     config:
-      ros_node: "ot2_alpha/ot2Node/actions" ## ros node meaning ros service
-    positions: ## N/A
-      deck2: [195.99, 60.21, 92.13, 565.41, 82.24, -65.25] ## N/A
+      ros_node: "/std_ns/sp_module_camera"
 
-  - name: ot2_growth_beta
+  - name: ot2_pcr_alpha
+    type: wei_ros_node 
     model: ot2
-    type: wei_ros_node
     config:
-      ros_node: "ot2_beta/ot2Node/actions" ## ros node meaning ros service
-    positions: ## N/A
-      deck2: [195.99, 60.21, 92.13, 565.41, 82.24, -65.25] ## N/A
+      ros_node: "/std_ns/ot2_pcr_alpha"                      
+    positions:                                                    
+      deck1_cooler: [247.999, -30.702, 275.835, 381.513, 124.830, -585.403] 
+
+  - name: ot2_growth_beta 
+    type: wei_ros_node 
+    model: ot2
+    config:
+      ros_node: "/std_ns/ot2_growth_beta"                      
+    positions:                                                    
+      deck2: [163.230, -59.032, 270.965, 415.013, 129.982, -951.510]  
+
+  - name: ot2_cp_gamma
+    type: wei_ros_node 
+    model: ot2
+    config:
+      ros_node: "/std_ns/ot2_cp_gamma"             
+    positions:                                                    
+      deck2: [156, 66.112, 83.90, 656.404, 119.405, -946.818]
+      
 
   - name: biometra
+    type: wei_ros_node
     model: biometra
-    type: wei_ros_node
     config:
-      ros_node: biometra rosnode
+      ros_node: "/std_ns/biometra96"
     positions:
-      default: [277.638, 39.029, 74.413, 602.159, 78.980, -910.338]
-
-  - name: hidex
-    model: hidex
-    type: wei_ros_node
-    config:
-      ros_node: hidex rosnode
-    positions:
-      default: [0.0, 0.0, 0.0, 0.0, 0.0, 0.0]
+      default: [247.0, 40.698, 38.294, 728.332, 123.077, 301.082]
 
   - name: camera_module
-    model: camera
     type: wei_ros_camera
     config:
       ros_node: "/std_ns/camera_module"
     positions:
       plate_station: [90.597,26.416, 66.422, 714.811, 81.916, 995.074]
+
+  - name: hidex
+    type: wei_tcp_node
+    model: Hidex
+    config:
+      tcp_address: "146.137.240.22"
+      tcp_port: 2000
+    positions:
+      default: []
+  - name: MiR_base
+    type: wei_rest_node
+    model: MiR250
+    config:
+      url: "http://mirbase1.cels.anl.gov/api/v2.0.0/"
+      auth: "/home/rpl/Documents/mirauth.txt"
+    positions:
+     default: []
+  # - name: hidex
+  #   type: wei_ros_node
+  #   model: hidex
+  #   config:
+  #     ros_node: hidex rosnode
+  #   positions:
+  #     default: [0.0, 0.0, 0.0, 0.0, 0.0, 0.0]
+
+  # - name: ur5
+  #   type: wei_ros_node
+  #   model: ur5
+  #   config:
+  #     ros_node: '/ur5_client/UR5_Client_Node'
+  - name: ur5
+    type: wei_ros_node
+    model: ur5
+    config:
+      ros_node: '/ur5_client/UR5_Client_Node'
+
 
 
 search_index: abcd-efgh-ijkl-mnop
