--- a/tests/test_pcr_workcell.yaml
+++ b/tests/test_pcr_workcell.yaml
@@ -64,6 +64,7 @@ modules:
       ros_node: "/std_ns/ot2_pcr_alpha"                      
     positions:                                                    
       deck1_cooler: [247.999, -30.702, 275.835, 381.513, 124.830, -585.403] 
+      deck2: [163.230, -59.032, 270.965, 415.013, 129.982, -951.510]  
 
   - name: ot2_growth_beta 
     type: wei_ros_node 
