--- a/tests/test_workflow.yaml
+++ b/tests/test_workflow.yaml
@@ -1,10 +1,9 @@
+name: Test - Workflow
+
 metadata:
-  name: Test - Workflow
   author: Tobias Ginsburg, Kyle Hippe
   info: Example workflow for WEI
   version: 0.1
-
-workcell: test_workcell.yaml
 
 modules:
   - name: ot2_pcr_alpha
@@ -21,7 +20,7 @@ flowdef:
   #This defines which module the action will run on, in this case, a Huson Sciclops PlateCrane robot that has stacks to store wellplates
     module: sciclops
   #This tells the module which action in its library to run, in this case grabbing a wellplate from one of the storage tower
-    command: get_plate
+    action: get_plate
   #These arguments specify the parameters for the action above, in this case, which tower the arm will pull a plate from. 
     args:
       loc: "tower1"
@@ -32,30 +31,24 @@ flowdef:
   
   - name: PF400 Moves plate from Sciclops to OT2
     module: pf400
-    command: transfer
+    action: transfer
     args:
-      source: sciclops.positions.exchange
-      target: ot2_pcr_alpha.positions.deck2
+      source: sciclops.exchange
+      target: ot2_pcr_alpha.deck2
       source_plate_rotation: narrow
       target_plate_rotation: wide
-    checks: null
-    comment: Place plate in ot2
 
   - name: The OT2 runs its protocol
     module: ot2_pcr_alpha
-    command: run_protocol
+    action: run_protocol
     args:
       config_path: tests/test_ot2_protocol.yaml
-    checks: RESOURCE_CHECK
-    comment: Run a protocol on the OT2
 
   - name: Move the plate from OT2 to Sciclops
     module: pf400
-    command: transfer
+    action: transfer
     args:
-      source: ot2_pcr_alpha.positions.deck2
-      target: sciclops.positions.exchange
+      source: ot2_pcr_alpha.deck2
+      target: sciclops.exchange
       source_plate_rotation: wide
       target_plate_rotation: narrow
-    checks: null
-    comment: Move from the OT2 back to the Sciclops
