--- a/tests/test_workflow.yaml
+++ b/tests/test_workflow.yaml
@@ -14,20 +14,20 @@ modules:
   - name: sciclops
 
 flowdef:
-  #This defines a step in the workflow. Each step represents an action on a single module
-  #This is a human legible name for the step
-  - name: Sciclops gets plate from stacks
-  #This defines which module the action will run on, in this case, a Huson Sciclops PlateCrane robot that has stacks to store wellplates
-    module: sciclops
-  #This tells the module which action in its library to run, in this case grabbing a wellplate from one of the storage tower
-    action: get_plate
-  #These arguments specify the parameters for the action above, in this case, which tower the arm will pull a plate from. 
-    args:
-      loc: "tower1"
-  #This represents checks that will take place before the system runs, in this case, there are none specified
-    checks: null
-  #This is a place for additional notes
-    comment: Stage pcr plates
+  # #This defines a step in the workflow. Each step represents an action on a single module
+  # #This is a human legible name for the step
+  # - name: Sciclops gets plate from stacks
+  # #This defines which module the action will run on, in this case, a Huson Sciclops PlateCrane robot that has stacks to store wellplates
+  #   module: sciclops
+  # #This tells the module which action in its library to run, in this case grabbing a wellplate from one of the storage tower
+  #   action: get_plate
+  # #These arguments specify the parameters for the action above, in this case, which tower the arm will pull a plate from. 
+  #   args:
+  #     loc: "tower1"
+  # #This represents checks that will take place before the system runs, in this case, there are none specified
+  #   checks: null
+  # #This is a place for additional notes
+  #   comment: Stage pcr plates
   
   - name: PF400 Moves plate from Sciclops to OT2
     module: pf400
@@ -38,17 +38,17 @@ flowdef:
       source_plate_rotation: narrow
       target_plate_rotation: wide
 
-  - name: The OT2 runs its protocol
-    module: ot2_pcr_alpha
-    action: run_protocol
-    args:
-      config_path: tests/test_ot2_protocol.yaml
+  # - name: The OT2 runs its protocol
+  #   module: ot2_pcr_alpha
+  #   action: run_protocol
+  #   args:
+  #     config_path: tests/test_ot2_protocol.yaml
 
-  - name: Move the plate from OT2 to Sciclops
-    module: pf400
-    action: transfer
-    args:
-      source: ot2_pcr_alpha.deck2
-      target: sciclops.exchange
-      source_plate_rotation: wide
-      target_plate_rotation: narrow
+  # - name: Move the plate from OT2 to Sciclops
+  #   module: pf400
+  #   action: transfer
+  #   args:
+  #     source: ot2_pcr_alpha.deck2
+  #     target: sciclops.exchange
+  #     source_plate_rotation: wide
+  #     target_plate_rotation: narrow
