--- a/tests/test_workcell.yaml
+++ b/tests/test_workcell.yaml
@@ -1,93 +1,13 @@
-config: { "search_index": "endpoint" }
+name: WEI - Test Workcell
 
 modules:
-
-  - name: test
-    model: test
-    type: simulate_callback
-
   - name: pf400
-    type: wei_ros_node
     model: pf400
+    interface: wei_ros_node
     config:
-      ros_node: "/std_ns/pf400Node"
-
-  - name: pf400_camera_right
-    type: wei_ros_camera
-    config:
-      ros_node: "/std_ns/pf400_camera_right"
-
-  - name: pf400_camera_left
-    type: wei_ros_camera
-    config:
-      ros_node: "/std_ns/pf400_camera_left"
-
-  - name: sciclops
-    type: wei_ros_node
-    model: sciclops
-    config:
-      ros_node: "/std_ns/SciclopsNode"
-    positions:
-      exchange: [222.0, -38.068, 335.876, 325.434, 79.923, 995.062]
-
-  - name: sealer
-    type: wei_ros_node
-    model: sealer
-    config:
-      ros_node: "/std_ns/SealerNode"
-    positions:
-      default: [205.128, -2.814, 264.373, 365.863, 79.144, 411.553]
-      
-  - name: peeler
-    type: wei_ros_node
-    model: peeler
-    config:
-      ros_node: "/std_ns/PeelerNode"
-    positions:
-      default: [225.521, -24.846, 244.836, 406.623, 80.967, 398.778]
-
-  - name: sp_module_camera
-    type: wei_ros_camera
-    config:
-      ros_node: "/std_ns/sp_module_camera"
-
-  - name: ot2_pcr_alpha
-    type: wei_ros_node 
-    model: ot2
-    config:
-      ros_node: "/std_ns/ot2_pcr_alpha"                      
-    positions:                                                    
-      deck1_cooler: [247.999, -30.702, 275.835, 381.513, 124.830, -585.403] 
-      deck2: [195.99, 60.21, 92.13, 565.41, 82.24, -65.25]
-
-  - name: ot2_growth_beta 
-    type: wei_ros_node 
-    model: ot2
-    config:
-      ros_node: "/std_ns/ot2_growth_beta"                      
-    positions:                                                    
-      deck2: [163.230, -59.032, 270.965, 415.013, 129.982, -951.510]  
-
-  - name: ot2_cp_gamma
-    type: wei_ros_node 
-    model: ot2
-    config:
-      ros_node: "/std_ns/ot2_cp_gamma"             
-    positions:                                                    
-      deck2: [156, 66.112, 83.90, 656.404, 119.405, -946.818]
-      
-
-  - name: biometra
-    type: wei_ros_node
-    model: biometra
-    config:
-      ros_node: "/std_ns/biometra96"
-    positions:
-      default: [247.0, 40.698, 38.294, 728.332, 123.077, 301.082]
-
-  - name: camera_module
-    type: wei_ros_camera
-    config:
-      ros_node: "/std_ns/camera_module"
-    positions:
-      plate_station: [90.597,26.416, 66.422, 714.811, 81.916, 995.074]
+      ros_node_address: "/std_ns/pf400Node"
+    workcell_coordinates: [0, -0.032184310257434845, 0.8420000076293945, 0.7071067690849304, 0, 0, 0.7071067690849304] # X, Y, Z, Q0, Q1, Q2, Q3
+ 
+locations:
+  pf400:
+    pf400.exchange: [222.0, -38.068, 335.876, 325.434, 79.923, 995.062]
