--- a/tests/test_workflow.yaml
+++ b/tests/test_workflow.yaml
@@ -1,5 +1,4 @@
 name: Test - Workflow
-
 metadata:
   author: Tobias Ginsburg, Kyle Hippe
   info: Example workflow for WEI
@@ -29,6 +28,9 @@ flowdef:
   # #This is a place for additional notes
   #   comment: Stage pcr plates
   
+
+    comment: Place plate in ot2
+
   - name: PF400 Moves plate from Sciclops to OT2
     module: pf400
     action: transfer
