--- a/tests/test_workcell.yaml
+++ b/tests/test_workcell.yaml
@@ -1,168 +1,13 @@
-name: Test Workcell
-config: { "search_index": "endpoint" }
+name: WEI - Test Workcell
+
 modules:
-
-  - name: sealer_rest
-    model: a4s_sealer
-    type: wei_rest_node
-    config:
-      url: "http://127.0.0.1:2000"
-      auth: "/home/rpl/Documents/mirauth.txt"
-    positions:
-      final_destination: [0.0, 0.0, 0.0, 0.0, 0.0, 0.0]
-  - name: test
-    model: test
-    type: simulate_callback
-    config:
-      foo: bar
-    positions:
-      final_destination: [0.0, 0.0, 0.0, 0.0, 0.0, 0.0]
-
   - name: pf400
-    type: wei_ros_node
     model: pf400
+    interface: wei_ros_node
     config:
-      ros_node: "/std_ns/pf400Node"
-    positions:
-      trash: [218.457, -2.408, 38.829, 683.518, 89.109, 995.074]
-
-  - name: pf400_camera_right
-    type: wei_ros_camera
-    config:
-      ros_node: "/std_ns/pf400_camera_right"
-
-  - name: pf400_camera_left
-    type: wei_ros_camera
-    config:
-      ros_node: "/std_ns/pf400_camera_left"
-
-  - name: sciclops
-    type: wei_ros_node
-    model: sciclops
-    config:
-      ros_node: "/std_ns/SciclopsNode"
-    positions:
-      exchange: [222.0, -38.068, 335.876, 325.434, 79.923, 995.062]
-
-  - name: sealer
-    type: wei_ros_node
-    model: a4s_sealer
-    config:
-      ros_node: "/std_ns/SealerNode"
-    positions:
-      default: [205.128, -2.814, 264.373, 365.863, 79.144, 411.553]
-      
-  - name: peeler
-    type: wei_ros_node
-    model: brooks_xpeel
-    config:
-      ros_node: "/std_ns/PeelerNode"
-    positions:
-      default: [225.521, -24.846, 244.836, 406.623, 80.967, 398.778]
-
-  - name: sp_module_camera
-    type: wei_ros_camera
-    config:
-      ros_node: "/std_ns/sp_module_camera"
-
-  - name: ot2_pcr_alpha
-    type: wei_ros_node 
-    model: ot2
-    config:
-      ros_node: "/std_ns/ot2_pcr_alpha"                      
-    positions:                                                    
-      deck1_cooler: [247.999, -30.702, 275.835, 381.513, 124.830, -585.403] 
-      deck2: [195.99, 60.21, 92.13, 565.41, 82.24, -65.25]
-
-  - name: ot2_growth_beta 
-    type: wei_ros_node 
-    model: ot2
-    config:
-      ros_node: "/std_ns/ot2_growth_beta"                      
-    positions:                                                    
-      deck2: [163.230, -59.032, 270.965, 415.013, 129.982, -951.510]  
-
-  - name: ot2_cp_gamma
-    type: wei_ros_node 
-    model: ot2
-    config:
-      ros_node: "/std_ns/ot2_cp_gamma"             
-    positions:                                                    
-      deck2: [156, 66.112, 83.90, 656.404, 119.405, -946.818]
-      
-
-  - name: biometra
-    type: wei_ros_node
-    model: biometra
-    config:
-      ros_node: "/std_ns/biometra96"
-    positions:
-      default: [247.0, 40.698, 38.294, 728.332, 123.077, 301.082]
-
-  - name: camera_module
-    type: wei_ros_camera
-    config:
-      ros_node: "/std_ns/camera_module"
-    positions:
-      plate_station: [90.597,26.416, 66.422, 714.811, 81.916, 995.074]
-
-  - name: hidex
-    type: wei_tcp_node
-    model: Hidex
-    config:
-      tcp_address: "146.137.240.22"
-      tcp_port: 2000
-    positions:
-      default: []
-  - name: MiR_base
-    type: wei_rest_node
-    model: MiR250
-    config:
-      url: "http://mirbase1.cels.anl.gov/api/v2.0.0/"
-      auth: "/home/rpl/Documents/mirauth.txt"
-    positions:
-     default: []
-  # - name: hidex
-  #   type: wei_ros_node
-  #   model: hidex
-  #   config:
-  #     ros_node: hidex rosnode
-  #   positions:
-  #     default: [0.0, 0.0, 0.0, 0.0, 0.0, 0.0]
-
-  # - name: ur5
-  #   type: wei_ros_node
-  #   model: ur5
-  #   config:
-  #     ros_node: '/ur5_client/UR5_Client_Node'
-  - name: ur5
-    type: wei_ros_node
-    model: ur5
-    config:
-      ros_node: '/std_ns/UR5_Client_Node'
-      
-  - name: chemspeed
-    type: wei_tcp_node
-    model: chemspeed
-    config:
-      tcp_address: "146.139.48.77"
-      tcp_port: "5556"
-    positions:
-      entry: [0.1443982476771353, 0.23224652474284782, 0.4578526573194748, 2.64925218571153, -1.6678398871472704, 0.08816791404852323]
-      entry_height: [0.4578526573194748]
-      cartesian: [-0.05595381953305448, 0.8503024836167845, 0.08059559616050552, -2.5852067124695184, 1.696619366309323, -0.03925570389832646]
-      joint_angles: [1.801013708114624, -2.5434171162047328, -0.814492404460907, -1.322988824253418, 1.5479660034179688, 0.264820396900177]
-
-  - name: tecan
-    type: wei_tcp_node
-    model: tecan
-    config:
-      tcp_address: "146.139.48.69"
-      tcp_port: "5557"
-    positions:
-      cartesian: [1.801013708114624, -2.5434171162047328, -0.814492404460907, -1.322988824253418, 1.5479660034179688, 0.264820396900177]
-      joint_angles: [1.801013708114624, -2.5434171162047328, -0.814492404460907, -1.322988824253418, 1.5479660034179688, 0.264820396900177]
-
-
-
-search_index: abcd-efgh-ijkl-mnop
+      ros_node_address: "/std_ns/pf400Node"
+    workcell_coordinates: [0, -0.032184310257434845, 0.8420000076293945, 0.7071067690849304, 0, 0, 0.7071067690849304] # X, Y, Z, Q0, Q1, Q2, Q3
+ 
+locations:
+  pf400:
+    pf400.exchange: [222.0, -38.068, 335.876, 325.434, 79.923, 995.062]
