--- a/tests/test_workcell.yaml
+++ b/tests/test_workcell.yaml
@@ -1,13 +1,19 @@
 name: WEI - Test Workcell
 
 modules:
-  - name: pf400
-    model: pf400
-    interface: wei_ros_node
+  - name: sealer
+    model: a4s_sealer
+    interface: wei_rest_node
     config:
-      ros_node_address: "/std_ns/pf400Node"
+      rest_node_address: "http://127.0.0.1:2000"
+      rest_node_auth: ""
     workcell_coordinates: [0, -0.032184310257434845, 0.8420000076293945, 0.7071067690849304, 0, 0, 0.7071067690849304] # X, Y, Z, Q0, Q1, Q2, Q3
  
 locations:
   pf400:
     pf400.exchange: [222.0, -38.068, 335.876, 325.434, 79.923, 995.062]
+  workcell:
+    pf400.exchange: [222.0, -38.068, 335.876, 325.434, 79.923, 995.062]
+    exchange2: [222.0, -38.068, 335.876, 325.434, 79.923, 995.062]
+    exchange3: [222.0, -38.068, 335.876, 325.434, 79.923, 995.062]
+    exchange4: [222.0, -38.068, 335.876, 325.434, 79.923, 995.062]
