--- a/tests/test_workflow.yaml
+++ b/tests/test_workflow.yaml
@@ -13,20 +13,20 @@ modules:
   - name: sciclops
 
 flowdef:
-  # #This defines a step in the workflow. Each step represents an action on a single module
-  # #This is a human legible name for the step
-  # - name: Sciclops gets plate from stacks
-  # #This defines which module the action will run on, in this case, a Huson Sciclops PlateCrane robot that has stacks to store wellplates
-  #   module: sciclops
-  # #This tells the module which action in its library to run, in this case grabbing a wellplate from one of the storage tower
-  #   action: get_plate
-  # #These arguments specify the parameters for the action above, in this case, which tower the arm will pull a plate from. 
-  #   args:
-  #     loc: "tower1"
-  # #This represents checks that will take place before the system runs, in this case, there are none specified
-  #   checks: null
-  # #This is a place for additional notes
-  #   comment: Stage pcr plates
+  #This defines a step in the workflow. Each step represents an action on a single module
+  #This is a human legible name for the step
+  - name: Sciclops gets plate from stacks
+  #This defines which module the action will run on, in this case, a Huson Sciclops PlateCrane robot that has stacks to store wellplates
+    module: sciclops
+  #This tells the module which action in its library to run, in this case grabbing a wellplate from one of the storage tower
+    action: get_plate
+  #These arguments specify the parameters for the action above, in this case, which tower the arm will pull a plate from. 
+    args:
+      loc: "tower1"
+  #This represents checks that will take place before the system runs, in this case, there are none specified
+    checks: null
+  #This is a place for additional notes
+    comment: Stage pcr plates
   
   - name: PF400 Moves plate from Sciclops to OT2
     module: pf400
