--- a/tests/test_workcell.yaml
+++ b/tests/test_workcell.yaml
@@ -118,7 +118,7 @@ locations:
     sealer.default: [205.128, -2.814, 264.373, 365.863, 79.144, 411.553]
     peeler.default: [225.521, -24.846, 244.836, 406.623, 80.967, 398.778]
     ot2_pcr_alpha.deck1_cooler: [247.999, -30.702, 275.835, 381.513, 124.830, -585.403] 
-    ot2_pcr_alpha.deck1_cooler: [195.99, 60.21, 92.13, 565.41, 82.24, -65.25]
+    ot2_pcr_alpha.deck2: [195.99, 60.21, 92.13, 565.41, 82.24, -65.25]
     ot2_growth_beta.deck2: [163.230, -59.032, 270.965, 415.013, 129.982, -951.510]  
     ot2_cp_gamma.deck2: [156, 66.112, 83.90, 656.404, 119.405, -946.818]
     biometra.default: [247.0, 40.698, 38.294, 728.332, 123.077, 301.082]
