--- a/tests/test_workflow.yaml
+++ b/tests/test_workflow.yaml
@@ -17,9 +17,9 @@ flowdef:
   #This is a human legible name for the step
   - name: Sciclops gets plate from stacks
   #This defines which module the action will run on, in this case, a Huson Sciclops PlateCrane robot that has stacks to store wellplates
-    module: sciclops
+    module: sealer
   #This tells the module which action in its library to run, in this case grabbing a wellplate from one of the storage tower
-    action: get_plate
+    action: seal
   #These arguments specify the parameters for the action above, in this case, which tower the arm will pull a plate from. 
     args:
       loc: "tower1"
