--- a/tests/test_workcell.yaml
+++ b/tests/test_workcell.yaml
@@ -44,6 +44,8 @@ modules:
 locations:
   pf400:
     pf400.exchange: [222.0, -38.068, 335.876, 325.434, 79.923, 995.062]
+    sciclops.exchange: [222.0, -38.068, 335.876, 325.434, 79.923, 995.062]
+    ot2_pcr_alpha.deck2: [222.0, -38.068, 335.876, 325.434, 79.923, 995.062]
   workcell:
     pf400.exchange: [222.0, -38.068, 335.876, 325.434, 79.923, 995.062]
     sciclops.exchange: [222.0, -38.068, 335.876, 325.434, 79.923, 995.062]
