--- a/tests/test_workflow.yaml
+++ b/tests/test_workflow.yaml
@@ -23,6 +23,7 @@ flowdef:
   #These arguments specify the parameters for the action above, in this case, which tower the arm will pull a plate from. 
     args:
       loc: "tower1"
+      target: "sciclops.exchange"
   #This represents checks that will take place before the system runs, in this case, there are none specified
     checks: null
   #This is a place for additional notes
