--- a/setup.cfg
+++ b/setup.cfg
@@ -1,13 +1,13 @@
 [metadata]
-name = rpl_wei
-version = attr: rpl_wei.__version__
-description = RPL workcell execution interface
+name = wei
+version = attr: wei.__version__
+description = Workcell Execution Interface
 long_description = file:README.md
 long_description_content_type=text/markdown
 
-url = https://github.com/AD-SDL/rpl_wei
-author = Kyle Hippe
-author_email = kyle.hippe@gmail.com
+url = https://github.com/AD-SDL/wei
+author = Rafael Vescovi, Tobias Ginsburg, Ryan Lewis, Kyle Hippe
+author_email = ravescovi@anl.gov
 
 [options]
 packages = find:
