--- a/tests/test_workcell.yaml
+++ b/tests/test_workcell.yaml
@@ -2,52 +2,30 @@ name: RPL_Modular_workcell
 
 #Info about data processing and location of the workcell
 config:
-  funcx_local_ep: "299edea0-db9a-4693-84ba-babfa655b1be"
+  funcx_local_ep: ""
   globus_local_ep: ""
-  ##
-  globus_search_index: "aefcecc6-e554-4f8c-a25b-147f23091944"
-  globus_portal_ep: "bb8d048a-2cad-4029-a9c7-671ec5d1f84d"
-  ##
-  globus_group: "dda56f31-53d1-11ed-bd8b-0db7472df7d6"
+  globus_search_index: ""
+  globus_portal_ep: ""
+  globus_group: ""
   workcell_origin_coordinates: [9.4307, -10.4176, 0, 1, 0, 0, 0]
 
 #List of all components accessible in this workcell
 modules:
-  - name: sealer
+  - name: sleep_node
     model: a4s_sealer
     interface: wei_rest_node
     config:
       rest_node_address: "http://127.0.0.1:2000"
       rest_node_auth: ""
-    workcell_coordinates: [0, 0, 0, 0, 0, 0] #[0, -0.032184310257434845, 0.8420000076293945, 0.7071067690849304, 0, 0, 0.7071067690849304] # X, Y, Z, Q0, Q1, Q2, Q3
-  - name: sciclops
+    workcell_coordinates: [0, 0, 0, 0, 0, 0] 
+  - name: camera_node
     model: a4s_sealer
     interface: wei_rest_node
     config:
       rest_node_address: "http://127.0.0.1:2001"
       rest_node_auth: ""
-    workcell_coordinates: [15, 0, 0, 0, 0, 0] #[0, -0.032184310257434845, 0.8420000076293945, 0.7071067690849304, 0, 0, 0.7071067690849304] # X, Y, Z, Q0, Q1, Q2, Q3
-  - name: pf400
-    model: a4s_sealer
-    interface: wei_rest_node
-    config:
-      rest_node_address: "http://127.0.0.1:2002"
-      rest_node_auth: ""
-    workcell_coordinates: [7.5, 15, 0, 0, 0, 0] #[0, -0.032184310257434845, 0.8420000076293945, 0.7071067690849304, 0, 0, 0.7071067690849304] # X, Y, Z, Q0, Q1, Q2, Q3
-  - name: ot2_pcr_alpha
-    model: a4s_sealer
-    interface: wei_rest_node
-    config:
-      rest_node_address: "http://127.0.0.1:2003"
-      rest_node_auth: ""
-    workcell_coordinates: [0, 30, 0, 0, 0, 0] #[0, -0.032184310257434845, 0.8420000076293945, 0.7071067690849304, 0, 0, 0.7071067690849304]
-  - name: ot2_cp_beta
-    model: a4s_sealer
-    interface: wei_rest_node
-    config:
-      rest_node_address: "http://127.0.0.1:2004"
-      rest_node_auth: ""
-    workcell_coordinates: [15, 30, 0, 0, 0, 0] 
+    workcell_coordinates: [15, 0, 0, 0, 0, 0] 
+    
 locations:
   pf400:
     pf400.exchange: [222.0, -38.068, 335.876, 325.434, 79.923, 995.062]
