--- a/tests/test_workflow.yaml
+++ b/tests/test_workflow.yaml
@@ -1,53 +1,33 @@
 name: Test - Workflow
 metadata:
-  author: Tobias Ginsburg, Kyle Hippe
+  author: Tobias Ginsburg, Kyle Hippe, Ryan D. Lewis
   info: Example workflow for WEI
-  version: 0.1
+  version: 0.2
 
 modules:
-  - name: ot2_pcr_alpha
-  - name: pf400
-  - name: peeler
-  - name: sealer
-  - name: biometra
-  - name: sciclops
+  - name: sleeper
+  - name: webcam
 
 flowdef:
   #This defines a step in the workflow. Each step represents an action on a single module
   #This is a human legible name for the step
-  - name: Sciclops gets plate from stacks
-  #This defines which module the action will run on, in this case, a Huson Sciclops PlateCrane robot that has stacks to store wellplates
-    module: sciclops
+  - name: Sleep workcell for t seconds
+  #This defines which module the action will run on, in this case, a test node that simply sleeps for t seconds
+    module: sleeper
   #This tells the module which action in its library to run, in this case grabbing a wellplate from one of the storage tower
-    action: get_plate
-  #These arguments specify the parameters for the action above, in this case, which tower the arm will pull a plate from. 
+    action: sleep
+  #These arguments specify the parameters for the action above, in this case, which tower the arm will pull a plate from.
     args:
-      loc: "tower1"
+      t: "5"
   #This represents checks that will take place before the system runs, in this case, there are none specified
     checks: null
   #This is a place for additional notes
-    comment: Stage pcr plates
-  
-  - name: PF400 Moves plate from Sciclops to OT2
-    module: pf400
-    action: transfer
-    args:
-      source: sciclops.exchange
-      target: ot2_pcr_alpha.deck2
-      source_plate_rotation: narrow
-      target_plate_rotation: wide
+    comment: Sleep for 5 seconds before we take a picture
 
-  - name: The OT2 runs its protocol
-    module: ot2_pcr_alpha
-    action: run_protocol
+  - name: Take Picture
+    module: webcam
+    action: take_picture
     args:
-      config_path: tests/test_ot2_protocol.yaml
-
-  - name: Move the plate from OT2 to Sciclops
-    module: pf400
-    action: transfer
-    args:
-      source: ot2_pcr_alpha.deck2
-      target: sciclops.exchange
-      source_plate_rotation: wide
-      target_plate_rotation: narrow
+      image_name: test_snapshot.jpg
+      source: webcam.pos
+      target: webcam.pos
