--- a/requirements/requirements.txt
+++ b/requirements/requirements.txt
@@ -9,5 +9,7 @@ rq==1.13.0
 requests==2.31.0
 ulid-py==1.1.0
 pyzmq==25.1.1
-numpy==1.21.6
+numpy==1.22.0
 opencv-python-headless==4.8.0.76
+#pottery==3.0.0
+pottery @ git+https://github.com/luckierdodge/pottery@master
