--- a/requirements/requirements.txt
+++ b/requirements/requirements.txt
@@ -11,6 +11,6 @@ pyzmq==25.1.1
 numpy==1.22.0
 opencv-python-headless==4.8.0.76
 
-#pottery==3.0.0
-pottery @ git+https://github.com/luckierdodge/pottery@master
+pottery==3.0.0
+#pottery @ git+https://github.com/luckierdodge/pottery@master
 
