--- a/requirements/requirements.txt
+++ b/requirements/requirements.txt
@@ -5,11 +5,12 @@ PyYAML==6.0
 fastapi==0.95.1
 uvicorn==0.21.1
 python-multipart==0.0.6
-rq==1.13.0
 requests==2.31.0
 ulid-py==1.1.0
 pyzmq==25.1.1
 numpy==1.22.0
 opencv-python-headless==4.8.0.76
-#pottery==3.0.0
-pottery @ git+https://github.com/luckierdodge/pottery@master
+
+pottery==3.0.0
+#pottery @ git+https://github.com/luckierdodge/pottery@master
+
