--- a/requirements/requirements.txt
+++ b/requirements/requirements.txt
@@ -10,6 +10,7 @@ ulid-py==1.1.0
 pyzmq==25.1.1
 numpy==1.22.0
 opencv-python-headless==4.8.0.76
+redis==4.2.2
 
 pottery==3.0.0
 #pottery @ git+https://github.com/luckierdodge/pottery@master
