--- a/requirements/requirements.txt
+++ b/requirements/requirements.txt
@@ -1,6 +1,6 @@
 # Place your requirements here
 pydantic==1.10
-devtools==0.9.0
+devtools==0.12.2
 PyYAML==6.0
 fastapi==0.95.1
 uvicorn==0.21.1
@@ -8,8 +8,9 @@ python-multipart==0.0.6
 requests==2.31.0
 ulid-py==1.1.0
 pyzmq==25.1.1
-numpy==1.22.0
+numpy==1.23.5
 opencv-python-headless==4.8.0.76
+redis==4.2.2
 
 pottery==3.0.0
 
